[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-exporter"
version = "0.1.0"
description = "YouTube exporter"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    # Add your dependencies here, or read from requirements.txt
]

[project.scripts]
youtube_exporter = "main:main"

[tool.setuptools.packages.find]
where = ["."]